languages and interests feature

--- a/wsgi/mysite/templates/linguo/base.html
+++ b/wsgi/mysite/templates/linguo/base.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <link href="{{STATIC_URL}}bootstrap-3.0.0/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="{{STATIC_URL}}bootstrap-3.0.0/dist/css/theme.min.css" rel="stylesheet">
     <script src="{{ STATIC_URL}}js/jquery-1.10.2.min.js"></script>
     <script src="{{ STATIC_URL}}bootstrap-3.0.0/dist/js/bootstrap.min.js"></script>
     <script src="{{ STATIC_URL}}js/typeahead.min.js"></script>
@@ -60,7 +60,13 @@
     </div> 
 
 
-    
+    <script type="text/javascript">
+      // $('.typeahead').typeahead({
+      //   name: 'accounts',
+      //   local: ['timtrueman', 'JakeHarding', 'vskarich']
+      // });
+
+    </script>
     
 
   </body>
