--- a/wsgi/mysite/templates/linguo/edit_profile.html
+++ b/wsgi/mysite/templates/linguo/edit_profile.html
@@ -1,82 +1,72 @@
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
-
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <!-- Bootstrap core CSS -->
-    
-
-    <!-- Custom styles for this template -->
-
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-    <div class="container" style='padding-top:5px;'>
-      <div class="row">
-        <div class="col-sm-6 col-md-4">
-          <div class="thumbnail">
-            <img src="http://rockyourcareer.files.wordpress.com/2012/11/george_blomgren_med-pic.jpg" style='height:200px;'>
-            <div class="caption">
-              <h3>Profile</h3>
-
-
-              <hr>
-              <dl>
-                <dt>Username</dt>
-                <dd><input type="text" class="form-control" placeholder="Text input">Username</dd>
-                <dt>Location</dt>
-                <dd><input type="text" class="form-control" placeholder="Location"></dd>
-                <dt>Langauges <small><a href="">view all</a></small></dt>
-                <dd>
-                      <option>Chinese</option>
-                      <option>German</option>
-                      <option>Thai</option>
-                      <option>English</option>
-                      <option>Japanese</option>
-                  </select>
-                </dd> 
-                <dt>Interests</dt>
-                <dd>
-                  <select class="form-control">
-                    <option>Sports</option>
-                    <option>Rock Music</option>
-                    <option>Reading</option>
-                    <option>Movie</option>
-                    <option>Cooking</option>
-                  </select>
-                </dd> 
-              </dl>
-            </div>
-            <p><a href="profile.html" class="btn btn-primary btn-block" role="button">Save</a></p>
-            <p><a href="profile.html" class="btn btn-default btn-block" role="button">Back</a></p>
+{% extends 'linguo/base.html' %}
+{% block content %}
+<div class="row" style='margin:auto;
+width:70%;padding-top:90px; max-width:900px;'>
+  <div class="well">
+    <form class="bs-example form-horizontal">
+      <fieldset>
+        <legend>Edit Profile  </legend>
+        <div class="form-group">
+          <label for="inputEmail" class="col-lg-2 control-label">Email</label>
+          <div class="col-lg-10">
+            <input class="form-control" id="disabledInput" type="text" placeholder="test@gmail.com" disabled>
           </div>
         </div>
-      </div>
+        
+        <div class="form-group">
+          <label for="textArea" class="col-lg-2 control-label">Textarea</label>
+          <div class="col-lg-10">
+            <textarea class="form-control" rows="3" id="textArea"></textarea>
+            <span class="help-block">A longer block of help text that breaks onto a new line and may extend beyond one line.</span>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-lg-2 control-label">Radios</label>
+          <div class="col-lg-10">
+            <div class="radio">
+              <label>
+                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
+                Option one is this
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+                Option two can be something else
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="select" class="col-lg-2 control-label">Selects</label>
+          <div class="col-lg-10">
+            <select class="form-control" id="select">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+            <br>
+            <select multiple="" class="form-control">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-lg-10 col-lg-offset-2">
+            <button class="btn btn-default">Cancel</button> 
+            <button type="submit" class="btn btn-primary">Submit</button> 
+          </div>
+        </div>
+      </fieldset>
+    </form>
+  </div>
+</div>
+{% endblock %}
 
-    </div> <!-- /container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/holder/holder.js"></script>
-  </body>
-</html>
+  
