--- a/wsgi/mysite/templates/linguo/login.html
+++ b/wsgi/mysite/templates/linguo/login.html
@@ -1,21 +1,33 @@
 {% extends 'linguo/base.html' %}
 {% block login %}
 {% block form %}
-<div class="row" style="padding-top:70px;max-width: 330px;margin: 0 auto;">
-  <form class="form-signin" id="login_form" method="post" action="/linguo/login/" style="max-width:400px;">
-    {% csrf_token %}
-    <h1 class="text-primary text-center">Linguo</h1>
-    <br>
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Username" name="username" value="" id="username" size="50" >
-          <input type="password" class="form-control" placeholder="Password" name="password" value="" id="password" size="50" >
-          
-        </div>
+<div class="row" style="padding-top:70px;margin: 0 auto;">
+  <div class="col-md-6">
+      <img src="{{STATIC_URL}}logo.png" style="width:500px; height:400px;">
+  </div>
+  <div class="col-md-5">
+      <div class="alert alert-info">
+          <p>Test ID</p>
+          <p>Username: test</p>
+          <p>Password: test</p>
+      </div>
+      <form class="form-signin" id="login_form" method="post" action="/linguo/login/">
+        {% csrf_token %}
         
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <a class="btn btn-lg btn-danger btn-block" href="/linguo/register/">Register</a>
-      </form>
-    </div>     
+        
+        <br>
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Username" name="username" value="" id="username" size="50" style="margin-bottom:5px;">
+              <input type="password" class="form-control" placeholder="Password" name="password" value="" id="password" size="50" >
+              
+            </div>
+            
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            <a class="btn btn-lg btn-default btn-block" href="/linguo/register/">Register</a>
+          </form>
+        </div>  
+  </div>
+     
 
 
     {% endblock %}
